--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,25 @@
 version: '3'
 services:
+  nginx:
+    image: nginx:alpine
+    restart: always
+    expose:
+      - 80
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./public:/opt/mastodon/public
+    networks:
+      - internal_network
+      - web-public
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.mastodon-dognose.rule=Host(`dogno.se`) || Host(`www.dogno.se`)'
+      - 'traefik.http.routers.mastodon-dognose.entrypoints=websecure'
+      - 'traefik.http.routers.mastodon-dognose.tls.certresolver=letsencrypt'
+    depends_on:
+      - web
+      - streaming
+
   db:
     restart: always
     image: postgres:14-alpine
@@ -23,40 +43,38 @@ services:
     volumes:
       - ./redis:/data
 
-  # es:
-  #   restart: always
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.17.4
-  #   environment:
-  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m -Des.enforce.bootstrap.checks=true"
-  #     - "xpack.license.self_generated.type=basic"
-  #     - "xpack.security.enabled=false"
-  #     - "xpack.watcher.enabled=false"
-  #     - "xpack.graph.enabled=false"
-  #     - "xpack.ml.enabled=false"
-  #     - "bootstrap.memory_lock=true"
-  #     - "cluster.name=es-mastodon"
-  #     - "discovery.type=single-node"
-  #     - "thread_pool.write.queue_size=1000"
-  #   networks:
-  #      - external_network
-  #      - internal_network
-  #   healthcheck:
-  #      test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health || exit 1"]
-  #   volumes:
-  #      - ./elasticsearch:/usr/share/elasticsearch/data
-  #   ulimits:
-  #     memlock:
-  #       soft: -1
-  #       hard: -1
-  #     nofile:
-  #       soft: 65536
-  #       hard: 65536
-  #   ports:
-  #     - '127.0.0.1:9200:9200'
+  es:
+    restart: always
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.4
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m -Des.enforce.bootstrap.checks=true"
+      - "xpack.license.self_generated.type=basic"
+      - "xpack.security.enabled=false"
+      - "xpack.watcher.enabled=false"
+      - "xpack.graph.enabled=false"
+      - "xpack.ml.enabled=false"
+      - "bootstrap.memory_lock=true"
+      - "cluster.name=es-mastodon"
+      - "discovery.type=single-node"
+      - "thread_pool.write.queue_size=1000"
+    networks:
+       - external_network
+       - internal_network
+    healthcheck:
+       test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health || exit 1"]
+    volumes:
+       - ./elasticsearch:/usr/share/elasticsearch/data
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
 
   web:
     build: .
-    image: tootsuite/mastodon
+    # image: tootsuite/mastodon
     restart: always
     env_file: .env.production
     command: bash -c "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000"
@@ -66,18 +84,16 @@ services:
     healthcheck:
       # prettier-ignore
       test: ['CMD-SHELL', 'wget -q --spider --proxy=off localhost:3000/health || exit 1']
-    ports:
-      - '127.0.0.1:3000:3000'
     depends_on:
       - db
       - redis
-      # - es
+      - es
     volumes:
-      - ./public/system:/mastodon/public/system
+      - ./public:/opt/mastodon/public
 
   streaming:
     build: .
-    image: tootsuite/mastodon
+    # image: tootsuite/mastodon
     restart: always
     env_file: .env.production
     command: node ./streaming
@@ -87,15 +103,13 @@ services:
     healthcheck:
       # prettier-ignore
       test: ['CMD-SHELL', 'wget -q --spider --proxy=off localhost:4000/api/v1/streaming/health || exit 1']
-    ports:
-      - '127.0.0.1:4000:4000'
     depends_on:
       - db
       - redis
 
   sidekiq:
     build: .
-    image: tootsuite/mastodon
+    # image: tootsuite/mastodon
     restart: always
     env_file: .env.production
     command: bundle exec sidekiq
@@ -106,9 +120,20 @@ services:
       - external_network
       - internal_network
     volumes:
-      - ./public/system:/mastodon/public/system
+      - ./public:/opt/mastodon/public
     healthcheck:
       test: ['CMD-SHELL', "ps aux | grep '[s]idekiq\ 6' || false"]
+
+  backup:
+    image: prodrigestivill/postgres-backup-local:14-alpine
+    restart: always
+    volumes:
+      - /mnt/hdd/backups/dognose/postgres:/backups
+    depends_on:
+      - db
+    networks:
+      - internal_network
+    env_file: ./.env.backups
 
   ## Uncomment to enable federation with tor instances along with adding the following ENV variables
   ## http_proxy=http://privoxy:8118
@@ -131,3 +156,5 @@ networks:
   external_network:
   internal_network:
     internal: true
+  web-public:
+    external: true
